(Fix) ENTRYPOINT Jar dir